# ics-cal

./: README.md  pyproject.toml
.github/workflows/: query-events.yml
src/ics_cal/: __init__.py  cli.py  query.py
tests/: test_query.py
